# project-4-template

./: .gitignore  CMakeLists.txt  README.md  RunCMake.bat  makefile  project2.sln
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-crash-report.md
.github/workflows/: LinuxBuild.yml  LinuxBuild.yml_disable  WindowsBuild.yml  config.yml
Project2/: Memory.cpp  Memory.h  MemoryDebugger.cpp  MemoryDebugger.h  SomeUsefulIncludes.h  main.cpp  project2.vcxproj  project2.vcxproj.filters  tests.cpp  tests.h
src/: Common.h  Factorio.cpp  Factorio.h  MemoryDebugger.cpp  MemoryDebugger.h  Project2Helper.h  SomeUsefulIncludes.h  main.cpp  memory.cpp  memory.h  tests.cpp  tests.h
test/: Test_Main.cpp
